tests/snapshots/linting_conformance__lint_error@E001_completed_without_date.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Warning,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 40,
        },
    },
    LintDiagnostic {
        code: "E001",
        severity: Error,
        message: "Completed action is missing a completion date (E001).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 40,
        },
    },
    LintDiagnostic {
        code: "E014",
        severity: Error,
        message: "Action is missing a creation date (E014).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 40,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Warning,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 27,
        },
    },
    LintDiagnostic {
        code: "E001",
        severity: Error,
        message: "Completed action is missing a completion date (E001).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 27,
        },
    },
    LintDiagnostic {
        code: "E014",
        severity: Error,
        message: "Action is missing a creation date (E014).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 27,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Warning,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 81,
        },
    },
    LintDiagnostic {
        code: "E001",
        severity: Error,
        message: "Completed action is missing a completion date (E001).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 81,
        },
    },
    LintDiagnostic {
        code: "E014",
        severity: Error,
        message: "Action is missing a creation date (E014).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 81,
        },
    },
]
