tests/snapshots/linting_conformance__lint_error@E002_date_without_completed.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 47,
        },
    },
    LintDiagnostic {
        code: "E002",
        severity: Error,
        message: "Action has a completion date but is not marked as completed (E002).",
        range: SourceRange {
            start_row: 1,
            start_col: 30,
            end_row: 1,
            end_col: 47,
        },
    },
    LintDiagnostic {
        code: "E014",
        severity: Error,
        message: "Action is missing a creation date (E014).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 47,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 55,
        },
    },
    LintDiagnostic {
        code: "E002",
        severity: Error,
        message: "Action has a completion date but is not marked as completed (E002).",
        range: SourceRange {
            start_row: 2,
            start_col: 38,
            end_row: 2,
            end_col: 55,
        },
    },
    LintDiagnostic {
        code: "E014",
        severity: Error,
        message: "Action is missing a creation date (E014).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 55,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 34,
        },
    },
    LintDiagnostic {
        code: "E002",
        severity: Error,
        message: "Action has a completion date but is not marked as completed (E002).",
        range: SourceRange {
            start_row: 3,
            start_col: 17,
            end_row: 3,
            end_col: 34,
        },
    },
    LintDiagnostic {
        code: "E014",
        severity: Error,
        message: "Action is missing a creation date (E014).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 34,
        },
    },
]
