tests/snapshots/linting_conformance__lint_error@E003_empty_context_tag.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 2,
            end_col: 41,
        },
    },
    LintDiagnostic {
        code: "E003",
        severity: Error,
        message: "Context tags cannot be empty (E003).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 2,
            end_col: 41,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 37,
        },
    },
]
