tests/snapshots/linting_conformance__lint_error@E004_invalid_uuid.snap
---
source: tests/linting_conformance.rs
assertion_line: 98
expression: diagnostics
---
[
    LintDiagnostic {
        code: "E004",
        severity: Error,
        message: "Invalid UUID format: '123' (E004).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 27,
        },
    },
    LintDiagnostic {
        code: "E004",
        severity: Error,
        message: "Invalid UUID format: '12345678-1234' (E004).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 43,
        },
    },
    LintDiagnostic {
        code: "E004",
        severity: Error,
        message: "Invalid UUID format: 'abc-def-abc-def' (E004).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 44,
        },
    },
    LintDiagnostic {
        code: "E004",
        severity: Error,
        message: "Invalid UUID format: '01950000-0000-7000-8000' (E004).",
        range: SourceRange {
            start_row: 4,
            start_col: 0,
            end_row: 4,
            end_col: 54,
        },
    },
]
