tests/snapshots/linting_conformance__lint_error@E005_duplicate_id.snap
---
source: tests/linting_conformance.rs
assertion_line: 98
expression: diagnostics
---
[
    LintDiagnostic {
        code: "E005",
        severity: Error,
        message: "Duplicate action ID found: 01950000-0000-7000-8000-000000000001 (E005)",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 70,
        },
    },
    LintDiagnostic {
        code: "E005",
        severity: Error,
        message: "Duplicate action ID found: 01950000-0000-7000-8000-000000000002 (E005)",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 5,
            end_col: 75,
        },
    },
]
