tests/snapshots/linting_conformance__lint_error@E008_empty_context_tag.snap
---
source: tests/linting_conformance.rs
assertion_line: 98
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 2,
            end_col: 41,
        },
    },
    LintDiagnostic {
        code: "E008",
        severity: Error,
        message: "Context tags cannot be empty (E008).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 2,
            end_col: 41,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 37,
        },
    },
    LintDiagnostic {
        code: "E008",
        severity: Error,
        message: "Context tags cannot be empty (E008).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 37,
        },
    },
]
