tests/snapshots/linting_conformance__lint_error@E012_completed_parent_uncompleted_child.snap
---
source: tests/linting_conformance.rs
assertion_line: 98
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 3,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "E012",
        severity: Error,
        message: "Parent is completed but some children are still active (E012).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 3,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "E001",
        severity: Error,
        message: "Completed action is missing a completion date (E001).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 3,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 23,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 8,
            end_col: 25,
        },
    },
    LintDiagnostic {
        code: "E012",
        severity: Error,
        message: "Parent is completed but some children are still active (E012).",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 8,
            end_col: 25,
        },
    },
    LintDiagnostic {
        code: "E001",
        severity: Error,
        message: "Completed action is missing a completion date (E001).",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 8,
            end_col: 25,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 6,
            start_col: 0,
            end_row: 6,
            end_col: 16,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 7,
            start_col: 0,
            end_row: 7,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "E001",
        severity: Error,
        message: "Completed action is missing a completion date (E001).",
        range: SourceRange {
            start_row: 7,
            start_col: 0,
            end_row: 7,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 8,
            start_col: 0,
            end_row: 8,
            end_col: 25,
        },
    },
]
