tests/snapshots/linting_conformance__lint_error@E015_creation_date_in_future.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Warning,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 36,
        },
    },
    LintDiagnostic {
        code: "E015",
        severity: Error,
        message: "Creation date cannot be in the future (E015).",
        range: SourceRange {
            start_row: 1,
            start_col: 25,
            end_row: 1,
            end_col: 36,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Warning,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 39,
        },
    },
    LintDiagnostic {
        code: "E015",
        severity: Error,
        message: "Creation date cannot be in the future (E015).",
        range: SourceRange {
            start_row: 2,
            start_col: 28,
            end_row: 2,
            end_col: 39,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Warning,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "E015",
        severity: Error,
        message: "Creation date cannot be in the future (E015).",
        range: SourceRange {
            start_row: 3,
            start_col: 19,
            end_row: 3,
            end_col: 30,
        },
    },
]
